log/build_2022-11-13_16-38-07/lmilicevic_1/stderr.log
  File "/home/lana/ros2_ws/install/lmilicevic_1/lib/python3.10/site-packages/lmilicevic_1/subscriber.py", line 67
    	self.get_logger().info('Start position: "%s"' % msg
    	                      ^
SyntaxError: '(' was never closed

